Bug 163124 - Context menu for Mouse pointer as pen broken
Summary: Context menu for Mouse pointer as pen broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: annotation(pen)
  Show dependency treegraph
 
Reported: 2024-09-24 11:02 UTC by Buovjaga
Modified: 2024-10-07 14:26 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2024-09-24 11:02:09 UTC
1. Open Impress
2. Slide Show - Slide Show Settings: Mouse pointer as pen
3. Start slide show and start right-clicking

In Windows and gen, you need two right-clicks for the pen context menu to appear. In gtk3 and qt-based UIs, the context menu will never appear.

Bibisected with linux-64-24.8 to c68712d3689a0322e59934cd8151d003e869f30d
IASS: make live slideshow experimental and configurable
Comment 1 m_a_riosv 2024-09-24 20:10:54 UTC
Reproducible.
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8687cc4eba0478ea0432dd1290f95be61919f172
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

On the first right-click a menu appears with ‘Cut Copy Paste’ in greyed-out grey.
Comment 2 Armin Le Grand (collabora) 2024-10-03 18:27:39 UTC
I think I identified the problem, added change, is on gerrit.
Comment 3 Armin Le Grand (collabora) 2024-10-03 18:27:58 UTC
See https://gerrit.libreoffice.org/c/core/+/174437
Comment 4 Commit Notification 2024-10-04 09:30:29 UTC
Armin Le Grand (allotropia) committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/37d3e978c95a99bffda6d6d2c6b76cbf7521b185

tdf#163124: Show correct PopUp when SlideShow running

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Buovjaga 2024-10-06 15:15:37 UTC
Thanks, confirmed working now on Linux and Windows.

Arch Linux 64-bit
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 40beeb144a00c9725cde4239c251f67c658d31a8
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 6 October 2024

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 40beeb144a00c9725cde4239c251f67c658d31a8
CPU threads: 2; OS: Windows 11 X86_64 (10.0 build 22621); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-GB
Calc: threaded