tdf#163124: Show correct PopUp when SlideShow running

When the non-native SlideShow in DrawViewShell::Command
in drviews4.cxx (see !bNativeShow) is active, the above
checks/actions have to be done to make the EditView work
normally, but use the "page" standard context menu
fallback only when SlideShow is not running to get the
SlideShow popup menu - as expected when SlideShow is
running.

Change-Id: I6e3bc69023218fc0decce61581ddbc498e00d39c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174437
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>
Tested-by: Jenkins